# sound_edition_creation

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
docs/: CMakeLists.txt  mainpage.md
include/import_export/: import_export.h
json/: project_data.json
scripts/: app_config.py  app_create.py  app_delete.py  common.py  lib_config.py  lib_create.py  lib_delete.py  reset.py
src/import_export/: CMakeLists.txt  import_export.cpp
tests/import_export/: CMakeLists.txt  test_import_export.cpp
